# TSGL_rust

./: .gitignore  CITATION.cff  Cargo.toml  README.md
src/dining_philosophers/: main.rs
src/producer_consumer/: main.rs
src/reader_writer/: main.rs
