[package]
name = "TSGL_rust"
version = "0.1.0"
edition = "2024"
authors = ["Prof. Dr. Teddy Surya Gunawan <tsgunawan@iium.edu.my>"]
description = "Rust ports of TSGL concurrency visualization demos using eframe/egui."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tsgunawan/TSGL_rust"
homepage = "https://github.com/tsgunawan/TSGL_rust"

[[bin]]
name = "reader_writer"
path = "src/reader_writer/main.rs"

[[bin]]
name = "producer_consumer"
path = "src/producer_consumer/main.rs"

[[bin]]
name = "dining_philosophers"
path = "src/dining_philosophers/main.rs"

[dependencies]
# For visualization (equivalent to TSGL Canvas)
eframe = "0.27"        # egui framework
egui = "0.27"

# For concurrency (most is std, but these help)
parking_lot = "0.12"   # faster Mutex/RwLock than std
crossbeam = "0.8"      # channels, better than std::sync::mpsc

# For PNG screenshot saving
png = "0.17"
